issue with search bar on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 /******************************************
 /* CSS
 /*******************************************/
-
+@-ms-viewport{
+  width: device-width;
+}
 /* Box Model Hack */
 *{
   box-sizing: border-box;
@@ -72,17 +74,17 @@ body{
   color: #1a1a1a;
 }
 
-.searchButton {
+/* .searchButton {
   width: 40px;
   height: 36px;
-  border: 1px none #86868650;
+  border: px none #86868650;
   background: #86868650;
   text-align: center;
   color: #fff;
   border-radius: 0 5px 5px 0;
   cursor: pointer;
   font-size: 20px;
-}
+} */
 
 /*Resize the wrap to see the search bar change!*/
 
